try out strict liquid variable parsing
will raise errors on every undefined variable

--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,8 @@ highlighter: rouge
 markdown: kramdown
 permalink: :categories/:title
 future: true
+liquid:
+  strict_variables: true
 plugins:
   - jekyll-redirect-from
 defaults:
